# Polynomial-Evaluation-Accelerator

./: project-specification-v-101925-2201 (1).md
polyacc-project/: .gitignore  CMakeLists.txt
polyacc-project/src/c/: CMakeLists.txt  buildsetup  makeme  pea_c_actor.c  pea_c_actor.h
polyacc-project/syn/design_1/: clock.xdc  pea_syn.tcl  runsynth  timing.rpt  utilization.rpt
polyacc-project/syn/design_2/: pea_syn.tcl  runsynth  timing.rpt  utilization.rpt
polyacc-project/syn/design_3/: pea_syn.tcl  runsynth  timing.rpt  utilization.rpt
polyacc-project/syn/design_4/: .__afsA5D57A24B  pea_syn.tcl  runsynth  timing.rpt  utilization.rpt
polyacc-project/test/: README.txt
polyacc-project/test/test_c/test01_stp_evp/: README.txt  control_in.txt  test-desc.txt
polyacc-project/test/test_c/test02_stp_overwrite/: control_in.txt  data_in.txt  out.txt  test-desc.txt
polyacc-project/test/test_c/test03_stp_multi_addr/: control_in.txt  correct-output.txt  data_in.txt  test-desc.txt
polyacc-project/test/test_c/test04_evp_simple/: test-desc.txt
polyacc-project/test/test_c/test05_evp_error/: control_in.txt  correct-output.txt  data_in.txt  test-desc.txt
polyacc-project/test/test_c/test06_evp_degree_0/: data_in.txt  runme  test-desc.txt
polyacc-project/test/test_c/test07_evb_simple/: control_in.txt  correct-output.txt  data_in.txt
polyacc-project/test/test_c/test08_evb_error/: test-desc.txt
polyacc-project/test/test_c/test09_evb_zero_block/: README.txt  control_in.txt
polyacc-project/test/test_c/test10_rst_simple/: control_in.txt  correct-output.txt  data_in.txt  status_out.txt  test-desc.txt
polyacc-project/test/test_c/test11_rst_multiple/: control_in.txt  correct-output.txt  data_in.txt  runme  test-desc.txt
polyacc-project/test/test_c/test12_rst_idempotent/: control_in.txt  data_in.txt  test-desc.txt
polyacc-project/test/test_c/test13_multiple/: control_in.txt  correct-output.txt  data_in.txt  result_out.txt  test-desc.txt
polyacc-project/test/test_c/test14_multiple/: control_in.txt  correct-output.txt  data_in.txt  test-desc.txt
(+105 files in other folders)
